BPER/DEVF/force-app/main/default/objects/Parametri_DeEnrollment__c/Parametri_DeEnrollment__c.object-meta.xml
<CustomObject>
    <label>Parametri De-Enrollment</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>De-Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parametri De-Enrollment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>