BPER/DEVF/force-app/main/default/objects/Parametri_DeEnrollment__c/fields/CRM_AbiNDG__c.field-meta.xml
<CustomField>
    <fullName>CRM_AbiNDG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Abi NDG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>