BPER/DEVF/force-app/main/default/objects/Parametri_DeEnrollment__c/fields/CRM_Cod_rap_890__c.field-meta.xml
<CustomField>
    <fullName>CRM_Cod_rap_890__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cod rap 890</label>
    <length>255</length>
    <type>Text</type>
</CustomField>