BPER/DEVF/force-app/main/default/objects/Parametri_DeEnrollment__c/fields/CRM_Sito__c.field-meta.xml
<CustomField>
    <fullName>CRM_Sito__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>