BPER/DEVF/force-app/main/default/objects/Parametri_DeEnrollment__c/fields/CRM_TelefonoWhatsapp__c.field-meta.xml
<CustomField>
    <fullName>CRM_TelefonoWhatsapp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Telefono Whatsapp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>