BPER/DEVF/force-app/main/default/objects/Parametri_DeEnrollment__c/fields/CRM_Tipo_richiesta__c.field-meta.xml
<CustomField>
    <fullName>CRM_Tipo_richiesta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo_richiesta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>